--- a/Dina/app/src/main/res/layout/activity_actividad3.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad3.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Trabaja niño"
+        android:text=" "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
