--- a/Dina/app/src/main/res/layout/activity_actividad6.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad6.xml
@@ -19,7 +19,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/diferencia_original" />
+            app:srcCompat="@drawable/diferencia_origen" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -27,18 +27,90 @@
             android:layout_height="322dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.964"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/diferencia_diferente" />
 
+        <ImageView
+            android:id="@+id/ivAcierto1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="52dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="172dp"
+            android:layout_marginEnd="136dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="192dp"
+            android:layout_marginEnd="108dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="300dp"
+            android:layout_marginEnd="80dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto4"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="245dp"
+            android:layout_marginEnd="63dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto6"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginEnd="113dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
+        <ImageView
+            android:id="@+id/ivAcierto5"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="76dp"
+            android:layout_marginEnd="34dp"
+            android:onClick="acierto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button5"
+    <TextView
+        android:id="@+id/tvAciertos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
 </LinearLayout>
