--- a/Dina/app/src/main/res/layout/activity_actividad2.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad2.xml
@@ -35,8 +35,9 @@
         android:layout_height="wrap_content">
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="0dp"
@@ -45,133 +46,136 @@
 
             <ImageView
                 android:id="@+id/ivPuzzle1"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle2"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle3"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/ivPuzzle4"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle5"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle6"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/ivPuzzle7"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle8"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle9"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/ivPuzzle10"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle11"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
 
             <ImageView
                 android:id="@+id/ivPuzzle12"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
                 android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:onClick="voltearCarta"
-                app:srcCompat="@drawable/piezapuzle20x20escala10" />
+                app:srcCompat="@drawable/dorso" />
         </TableRow>
 
     </TableLayout>
