--- a/Dina/app/src/main/res/layout/activity_actividad5.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad5.xml
@@ -13,9 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:layout_margin="20sp"
-        android:numColumns="12"
+        android:horizontalSpacing="10dp"
 
-        android:padding="0dp"/>
+        android:numColumns="12"
+        android:padding="0dp"
+        android:verticalSpacing="10dp" />
 
     <TextView
         android:id="@+id/tvResultadoSopa"
