--- a/Dina/app/src/main/res/layout/activity_actividad5_textview.xml
+++ b/Dina/app/src/main/res/layout/activity_actividad5_textview.xml
@@ -6,9 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textSize="20dp"
-    android:paddingTop="6dp"
-    android:paddingBottom="6dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_margin="10dp">
 
 </TextView>
 
